[package]
name = "prettypst"
version = "1.1.2"
edition = "2021"
description = "Formatter for Typst"
license-file = "LICENSE"
repository = "https://github.com/antonWetzel/prettypst"
keywords = ["cli"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.204", features = ["derive"] }
typst-syntax = "0.12.0"
clap = { version = "4.5", features = ["derive", "env"] }
toml = { version = "0.8", default-features = false, features = [
    "parse",
    "display",
] }
thiserror = "1.0.63"

[features]
default = []
print-root = []
