[package]
name = "prettypst"
version = "3.2.0"
edition = "2024"
description = "Formatter for Typst"
license-file = "LICENSE"
repository = "https://github.com/antonWetzel/prettypst"
keywords = ["cli"]
categories = ["command-line-utilities"]

[features]
default = []
print-root = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
typst-syntax = "0.14"
clap = { version = "4.5", features = ["derive", "env"] }
toml = { version = "0.8", default-features = false, features = [
    "parse",
    "display",
] }
thiserror = "2.0"
